WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75516
DFG: The assertion that a double-voted variable cannot become double-unvoted is wrong
https://bugs.webkit.org/show_bug.cgi?id=75516
Summary
DFG: The assertion that a double-voted variable cannot become double-unvoted ...
Filip Pizlo
Reported
2012-01-03 20:42:32 PST
Patch forthcoming.
Attachments
the patch
(3.39 KB, patch)
2012-01-03 20:45 PST
,
Filip Pizlo
barraclough
: review+
Details
Formatted Diff
Diff
the patch, with test
(14.21 KB, patch)
2012-01-03 21:41 PST
,
Filip Pizlo
aestes
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-01-03 20:45:04 PST
Created
attachment 121048
[details]
the patch I'm going to try to reduce a test case for this, though this may be hard.
Filip Pizlo
Comment 2
2012-01-03 21:41:53 PST
Created
attachment 121059
[details]
the patch, with test Test needs review.
Andy Estes
Comment 3
2012-01-03 21:45:02 PST
Comment on
attachment 121059
[details]
the patch, with test View in context:
https://bugs.webkit.org/attachment.cgi?id=121059&action=review
> LayoutTests/ChangeLog:3 > + DFG: The assertion that a double-voted variable cannot becom double-unvoted is wrong
Typo: 'becom'
> LayoutTests/ChangeLog:10 > + that become either double, or integer, or mix or double and integer only after multiple
Typo: 'or mix or double...'
Filip Pizlo
Comment 4
2012-01-03 21:45:42 PST
Test rubber stamped by Andy Estes. Will do a full testing run and then land.
Filip Pizlo
Comment 5
2012-01-03 21:46:12 PST
(In reply to
comment #3
)
> (From update of
attachment 121059
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=121059&action=review
> > > LayoutTests/ChangeLog:3 > > + DFG: The assertion that a double-voted variable cannot becom double-unvoted is wrong > > Typo: 'becom' > > > LayoutTests/ChangeLog:10 > > + that become either double, or integer, or mix or double and integer only after multiple > > Typo: 'or mix or double...'
Fixed and fixed. Thanks!
Andy Estes
Comment 6
2012-01-03 21:46:41 PST
Comment on
attachment 121059
[details]
the patch, with test r=me for the test if you fix the ChangeLog typos. The code change is covered by Gavin's review.
Filip Pizlo
Comment 7
2012-01-03 23:27:40 PST
Landed in
http://trac.webkit.org/changeset/104016
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug